# AlphaAnalyst-open-source-autonomous-equity-research-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_news_url_unique.py
backend/config/: models.yaml
backend/src/: cache.py  db.py  settings.py
backend/src/agents/: base.py  devils_advocate_agent.py  earnings_call_agent.py  filings_agent.py  insider_agent.py  market_data_agent.py  news_agent.py  synthesizer.py  synthesizer_prompt.py
backend/src/api/: main.py  routes.py  schemas.py
backend/src/clients/: edgar.py  finnhub.py  finnhub_estimates.py  fmp.py  fmp_transcripts.py  fred.py  google_news.py  marketaux.py  polygon.py  sec_api.py  voyage.py
backend/src/fetchers/: estimates.py  filings.py  indexer.py  macro.py  market_data.py  news.py  transcripts.py
backend/src/llm/: __init__.py  client.py  embeddings.py  usage.py
backend/src/modeler/: assumptions.py  comps.py  dcf.py
backend/src/models/: estimates.py  filing.py  finding.py  macro.py  market.py  (+2 more)
backend/tests/: test_api.py  test_db.py  test_dcf.py  test_devils_advocate_agent.py  test_earnings_call_agent.py  test_edgar.py  test_estimates_fetcher.py  test_filings_agent.py  test_filings_fetcher.py  test_indexer.py  test_insider_agent.py  test_llm_client.py  test_macro_fetcher.py  test_market_data_agent.py  test_market_fetcher.py  test_news_agent.py  test_news_fetcher.py  test_pipeline.py  test_synthesizer.py  test_transcripts_fetcher.py
(+46 files in other folders)
